[tools] Put the showcase webapp tests under a security manager
git-svn-id: https://svn.apache.org/repos/asf/velocity/tools/trunk@1833884 13f79535-47bb-0310-9956-ffa450edef68